# memvid-rs

./: .gitignore  Cargo.toml  README.md
data/: memory_index.db
examples/: README.md  basic_encoding.rs  ml_embedding_demo.rs  ollama_chat.rs  round_trip_test.rs  simple_chat.rs
src/: config.rs  error.rs  lib.rs  main.rs  utils.rs
src/api/: chat.rs  encoder.rs  mod.rs  retriever.rs
src/ml/: device.rs  embedding.rs  index.rs  mod.rs  models.rs  search.rs  text.rs
src/qr/: decoder.rs  encoder.rs  mod.rs
src/storage/: database.rs  migrations.rs  mod.rs  schema.rs
src/text/: chunking.rs  mod.rs  pdf.rs
src/video/: decoder.rs  encoder.rs  mod.rs
tests/: basic_encoding.rs  cli_append_test.rs  incremental_update_demo.rs  integration_tests.rs  llm_integration_benchmark.rs  ml_embedding_demo.rs  round_trip_test.rs
