[package]
name = "memvid-rs"
version = "1.0.0"
edition = "2024"
authors = ["AllenDang <allengnr@gmail.com>"]
description = "High-performance QR code video encoding for text storage and semantic retrieval"
license = "MIT"
repository = "https://github.com/AllenDang/memvid-rs"
keywords = ["qr", "video", "search", "encoding", "ai"]
categories = ["multimedia::video", "text-processing", "database"]

[dependencies]
# Async runtime
tokio = { version = "1.45", features = ["full"] }

# Parallel processing
rayon = "1.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# QR code generation and decoding
qrcode = "0.14"  # Latest version with improved error recovery
rqrr = "0.9"     # Latest version with better decoding performance

# Image processing - PURE RUST
image = "0.25"   # Pure Rust image processing
imageproc = "0.25"  # Additional image processing algorithms

# Video processing - Static FFmpeg for all formats
ffmpeg-next = "7.1"  # Static FFmpeg - handles everything

# Machine learning and embedding models - COMPLETE ML STACK
candle-core = { version = "0.8", features = ["metal"] }  # GPU support built-in
candle-nn = { version = "0.8", features = ["metal"] }
candle-transformers = { version = "0.8", features = ["metal"] }
tokenizers = "0.20"  # SentenceTransformer tokenization
hf-hub = "0.3"             # HuggingFace model downloading
safetensors = "0.4"        # Model weight loading
memmap2 = "0.9"            # Efficient model file access
byteorder = "1.5"          # Binary data handling

# Vector search - PRODUCTION-READY SEARCH ENGINE
hnsw_rs = "0.3"            # High-performance HNSW implementation
instant-distance = "0.6"   # Fast approximate nearest neighbor search

# Database storage - Built-in by default
rusqlite = { version = "0.32", features = ["bundled"] }  # Embedded SQLite database - zero system deps

# PDF processing - Built-in by default
pdf-extract = "0.9"  # Text extraction
lopdf = "0.36"       # PDF operations

# Text processing
regex = "1.11"
unicode-normalization = "0.1"  # Text preprocessing

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

# Compression and encoding
flate2 = "1.0"       # Pure Rust gzip
base64 = "0.22"      # Pure Rust base64
bincode = "1.3"      # Binary serialization

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# CLI
clap = { version = "4.5", features = ["derive"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# OpenAI API client
async-openai = "0.25"

# Progress bars
indicatif = "0.17"

# Numerical computing
ndarray = "0.16"
half = "2.4"         # Half-precision float support

[dev-dependencies]
criterion = "0.5"    # Performance testing
tempfile = "3.10"    # Temporary files
approx = "0.5"       # Floating point comparisons for ML tests

[features]
default = ["metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]


[[bin]]
name = "memvid-rs"
path = "src/main.rs"

# Examples
[[example]]
name = "simple_chat"
path = "examples/simple_chat.rs"

[[example]]
name = "ollama_chat"
path = "examples/ollama_chat.rs"

[lib]
name = "memvid_rs"
path = "src/lib.rs"
